--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.lucasladeira</groupId>
 	<artifactId>api-restful-spring-postgre</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<name>api-restful-spring-postgre</name>
 	<description>Projeto de API RestFul com Spring + Postgre</description>
 	<properties>
